# rust-crates

./: .gitignore  README.md
az_app_identity/: Cargo.toml  README.md
az_app_identity/examples/: identity.rs
az_app_identity/src/: lib.rs
az_app_secrets/: Cargo.toml  README.md
az_app_secrets/examples/: secrets.rs
az_app_secrets/src/: lib.rs
az_app_secrets/src/az_app_secrets_init_macro/: Cargo.toml
az_app_secrets/src/az_app_secrets_init_macro/az_app_secrets_init_macro_derive/: Cargo.toml
az_app_secrets/src/az_app_secrets_init_macro/az_app_secrets_init_macro_derive/src/: lib.rs
az_app_secrets/src/az_app_secrets_init_macro/src/: lib.rs
az_app_secrets/src/az_app_secrets_new_macro/: Cargo.toml
az_app_secrets/src/az_app_secrets_new_macro/az_app_secrets_new_macro_derive/: Cargo.toml
az_app_secrets/src/az_app_secrets_new_macro/az_app_secrets_new_macro_derive/src/: lib.rs
az_app_secrets/src/az_app_secrets_new_macro/src/: lib.rs
az_app_variables/: Cargo.toml  README.md
az_app_variables/app_variables_init_macro/app_variables_init_macro_derive/: Cargo.toml
az_app_variables/app_variables_init_macro/app_variables_init_macro_derive/src/: lib.rs
az_app_variables/app_variables_new_macro/: Cargo.toml
az_app_variables/app_variables_new_macro/app_variables_new_macro_derive/src/: lib.rs
az_app_variables/examples/: variables.rs
az_app_variables/src/: lib.rs
az_app_variables/src/app_variables_init_macro/: Cargo.toml
az_app_variables/src/app_variables_init_macro/app_variables_init_macro_derive/src/: lib.rs
az_app_variables/src/app_variables_new_macro/app_variables_new_macro_derive/: Cargo.toml
az_app_variables/src/app_variables_new_macro/app_variables_new_macro_derive/src/: lib.rs
az_app_variables/src/app_variables_new_macro/src/: lib.rs
az_app_variables/src/az_app_variables_init_macro/: Cargo.toml
az_app_variables/src/az_app_variables_init_macro/az_app_variables_init_macro_derive/: Cargo.toml
az_app_variables/src/az_app_variables_init_macro/az_app_variables_init_macro_derive/src/: lib.rs
az_app_variables/src/az_app_variables_init_macro/src/: lib.rs
az_app_variables/src/az_app_variables_new_macro/: Cargo.toml
az_app_variables/src/az_app_variables_new_macro/az_app_variables_new_macro_derive/: Cargo.toml
az_app_variables/src/az_app_variables_new_macro/az_app_variables_new_macro_derive/src/: lib.rs
az_app_variables/src/az_app_variables_new_macro/src/: lib.rs
