[package]
name = "az_app_variables"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az_app_variables_new_macro = { path="src/az_app_variables_new_macro" }
az_app_variables_new_macro_derive = { path="src/az_app_variables_new_macro/az_app_variables_new_macro_derive" }
az_app_variables_init_macro = { path="src/az_app_variables_init_macro" }
az_app_variables_init_macro_derive = { path="src/az_app_variables_init_macro/az_app_variables_init_macro_derive" }