[package]
name = "az_app_secrets_init_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
azure_identity                  = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }